[package]
name = "incites-to-altmetrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
csv = "1.2.1"
dotenv = "0.15.0"
governor = "0.5.1"
itertools = "0.10.5"
json = "0.12.4"
lazy_static = "1.4.0"
reqwest = "0.11.14"
tokio = { version = "1.27.0", features = ["full"] }
